# fast-api-training

./: .pre-commit-config.yaml  Dockerfile.railway  Dockerfile.railway.learning_platform  README.md  pyproject.toml  railpack.toml  railway.toml  ty_note.ipynb  typing.ipynb
.github/: copilot-instructions.md
fast_api_big_exercise/: README.md  alembic.ini  pyproject.toml  pyrightconfig.json
fast_api_big_exercise/alembic/: env.py
fast_api_big_exercise/alembic/versions/: b50ef2e0e51d_baseline_users_and_tasks_tables.py
fast_api_big_exercise/src/: main.py
fast_api_big_exercise/src/api/: dependencies.py
fast_api_big_exercise/src/api/routes/: auth.py  tasks.py
fast_api_big_exercise/src/core/: __init__.py  config.py  security.py
fast_api_big_exercise/src/domain/entities/: __init__.py  task.py  user.py
fast_api_big_exercise/src/domain/repositories/: __init__.py  task_repository.py  user_repository.py
fast_api_big_exercise/src/domain/services/: __init__.py  auth_service.py  task_service.py
fast_api_big_exercise/src/infrastructure/database/: connection.py  models.py  repositories.py
fast_api_big_exercise/src/infrastructure/logging/: __init__.py  middleware.py  setup.py
fast_api_big_exercise/src/schemas/: __init__.py  task_schemas.py  token_schemas.py  user_schemas.py
fast_api_big_exercise/tests/: base.py  conftest.py  fixtures.py
fast_api_big_exercise/tests/api/: test_auth_routes.py  test_task_routes.py
fast_api_big_exercise/tests/core/: test_security.py
fast_api_big_exercise/tests/domain/services/: test_auth_service.py  test_task_service.py
fast_api_big_exercise/tests/integration/: conftest.py
fast_api_big_exercise/tests/schemas/: test_schemas.py
fast_api_big_exercise/tests/unit/: test_auth_service.py  test_schemas.py  test_task_service.py
fast_api_exercise_1/: README.md  main.py  pyproject.toml
fast_api_exercise_1/apis/: items.py
fast_api_exercise_1/core/: store.py
fast_api_exercise_1/schemas/: item.py
fast_api_exercise_2/: background_tasks.py  database.py  dependencies.py  main.py  pyproject.toml  websocket_manager.py
fast_api_exercise_2/routers/: auth.py  items.py  websocket_router.py
fast_api_exercise_3/: pyproject.toml
fast_api_exercise_3/src/core/: config.py
fast_api_oauth2/: main.py  pyproject.toml
fast_api_practice/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  gotchas.md  main.py  pyproject.toml  railpack.toml  railway.toml
fast_api_practice/.claude/: CLAUDE.md
fast_api_practice/.github/: copilot-instructions.md
fast_api_practice/alembic/: env.py
fast_api_practice/alembic/versions/: 120e14d02e4d_add_projects_members_tasks_comments.py  a1b2c3d4e5f6_simplify_roles_to_project_level.py  a2235df5580e_simplify_roles_to_project_level_rbac.py  f70fd3aaf18c_baseline_all_tables.py
fast_api_practice/docs/: [KhoiVo] DevOps Training Plan.md  analysys_plan.md  day1-report.md  day2-report.md  day3-report.md  devops-execution-plan.md  implementation_plan_phase3b_4.md  plan.md  presentation_script.md  quick_devops_summary.md  rbac_permissions.md  supporter_comments.md
fast_api_practice/docs/api/: CHANGELOG.md
fast_api_practice/scripts/: demo_websocket.py
fast_api_practice/src/: main.py
fast_api_practice/src/api/: dependencies.py  middleware.py
fast_api_practice/src/api/v1/: auth.py  comments.py  projects.py  tasks.py  users.py
fast_api_practice/src/core/: config.py  permissions.py  security.py
fast_api_practice/src/domain/: exceptions.py
fast_api_practice/src/domain/entities/: __init__.py  comment.py  project.py  project_member.py  task.py  user.py
fast_api_practice/src/domain/repositories/: base.py  comment_repository.py  project_repository.py  task_repository.py  user_repository.py
fast_api_practice/src/domain/services/: auth_service.py  comment_service.py  project_service.py  task_service.py  user_service.py
fast_api_practice/src/infrastructure/: background.py
fast_api_practice/src/infrastructure/database/: connection.py  models.py  repositories.py
fast_api_practice/src/infrastructure/logging/: setup.py
fast_api_practice/src/schemas/: comment.py  common.py  project.py  task.py  user.py
fast_api_practice/src/websockets/: __init__.py  notifications.py  router.py
fast_api_practice/tests/: conftest.py  fixtures.py  test_auth.py  test_background.py  test_comments.py  test_health.py  test_permissions.py  test_projects.py  test_schemas.py  test_tasks.py  test_users.py  test_websockets.py
learning_platform/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
learning_platform/alembic/: env.py
learning_platform/docs/: [KhoiVo] FastAPI - Analysis Plan.md  [KhoiVo] FastAPI - Big Practice.md
learning_platform/src/: config.py  database.py  exceptions.py  logging.py  main.py  models.py  pagination.py  redis.py
learning_platform/src/auth/: constants.py  dependencies.py  exceptions.py  jwt.py  router.py  schemas.py  security.py  service.py
learning_platform/src/users/: exceptions.py  models.py  router.py  schemas.py  service.py
learning_platform/tests/: conftest.py
learning_platform/tests/auth/: test_auth.py
learning_platform/tests/users/: test_users.py
task_manager/: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
task_manager/docs/: supporters_comments.md
task_manager/src/: __init__.py  cli.py  helpers.py
task_manager/src/enums/: task_status.py
task_manager/src/models/: task.py
task_manager/src/repositories/: base.py  task_repo.py
task_manager/src/services/: task_service.py
task_manager/src/task_manager/: cli.py  helpers.py
task_manager/src/task_manager/cli/: helpers.py  main.py
task_manager/src/task_manager/models/: __init__.py  task.py
task_manager/src/task_manager/repositories/: __init__.py  task_repo.py
task_manager/tests/: test_cli_commands.py
task_manager/tests/enums/: test_task_status.py
task_manager/tests/models/: __init__.py  test_task.py
task_manager/tests/services/: test_task_service.py
(+124 files in other folders)
