[project]
name = "fast-api-exercise-1"
version = "1.0.0"
description = "FastAPI Exercise 1: In-Memory CRUD API with Pydantic validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["apis", "core", "models", "schemas"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
